--- a/roles/gateway/tasks/download-packages.yml
+++ b/roles/gateway/tasks/download-packages.yml
@@ -23,8 +23,10 @@
 
 - name: Check for valid IAG release
   ansible.builtin.fail:
-    msg: "Deployer does not support installing Gateway version {{ iag_release }} on {{ ansible_distribution }}-{{ ansible_distribution_major_version }}"
-  when: invalid_iag_release is defined
+    msg: >-
+      Deployer does not support installing Gateway version {{ iag_release }} on
+      {{ ansible_distribution }} {{ ansible_distribution_major_version }}
+  when: iag_invalid_release is defined
 
 - name: Download Gateway OS rpms
   ansible.builtin.import_role:
