--- a/roles/gateway/tasks/main.yml
+++ b/roles/gateway/tasks/main.yml
@@ -11,8 +11,10 @@
 
 - name: Check for valid IAG release
   ansible.builtin.fail:
-    msg: "Deployer does not support installing Gateway version {{ iag_release }} on {{ ansible_distribution }}-{{ ansible_distribution_major_version }}"
-  when: invalid_iag_release is defined
+    msg: >-
+      Deployer does not support installing Gateway version {{ iag_release }} on
+      {{ ansible_distribution }} {{ ansible_distribution_major_version }}
+  when: iag_invalid_release is defined
 
 - name: Install base OS packages
   ansible.builtin.include_role:
