--- a/roles/gateway_haproxy/tasks/main.yml
+++ b/roles/gateway_haproxy/tasks/main.yml
@@ -10,8 +10,8 @@
 
 - name: Check for valid IAG release
   ansible.builtin.fail:
-    msg: "Deployer does not support installing HAProxy on {{ iag_release }}"
-  when: invalid_iag_release is defined
+    msg: "Deployer does not support installing HAProxy for IAG version {{ iag_release }}"
+  when: iag_invalid_release is defined
 
 - name: Install HAProxy
   ansible.builtin.package:
