--- a/roles/mongodb/tasks/download-packages.yml
+++ b/roles/mongodb/tasks/download-packages.yml
@@ -22,8 +22,10 @@
 
 - name: Check for valid MongoDB release
   ansible.builtin.fail:
-    msg: "Deployer does not support installing MongoDB for IAP version {{ iap_release }} on {{ ansible_distribution | lower }}-{{ ansible_distribution_major_version }}"
-  when: invalid_mongodb_release is defined
+    msg: >-
+      Deployer does not support installing MongoDB for IAP version {{ iap_release }} on
+      {{ ansible_distribution }} {{ ansible_distribution_major_version }}
+  when: mongodb_invalid_release is defined
 
 - name: Install MongoDB repo
   ansible.builtin.yum_repository:
