--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -11,8 +11,10 @@
 
 - name: Check for valid MongoDB release
   ansible.builtin.fail:
-    msg: "Deployer does not support installing MongoDB for IAP version {{ iap_release }} on {{ ansible_distribution }}-{{ ansible_distribution_major_version }}"
-  when: invalid_iag_release is defined
+    msg: >-
+      Deployer does not support installing MongoDB for IAP version {{ iap_release }} on
+      {{ ansible_distribution }} {{ ansible_distribution_major_version }}
+  when: mongodb_invalid_release is defined
   tags: always
 
 - name: Install base OS packages
