--- a/roles/platform/tasks/determine-release-vars.yml
+++ b/roles/platform/tasks/determine-release-vars.yml
@@ -1,24 +1,41 @@
 # Copyright (c) 2024, Itential, Inc
 # GNU General Public License v3.0+ (see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
-- name: Determine package name from the tar file name
-  ansible.builtin.set_fact:
-    iap_package_name: "{{ iap_tar_file.split('.linux.x86_64.tar.gz')[0] }}"
-  when:
-    - iap_package_name is not defined
-    - iap_tar_file is defined
+- name: Determine package name
+  when: iap_package_name is not defined
+  block:
+    - name: Determine package name from the bin file name
+      ansible.builtin.set_fact:
+        iap_package_name: "{{ iap_bin_file.split('.linux.x86_64.bin')[0] }}"
+      when: iap_bin_file is defined
 
-- name: Determine package name from the bin file name
-  ansible.builtin.set_fact:
-    iap_package_name: "{{ iap_bin_file.split('.linux.x86_64.bin')[0] }}"
-  when:
-    - iap_package_name is not defined
-    - iap_bin_file is defined
+    - name: Determine package name from the tar file name
+      ansible.builtin.set_fact:
+        iap_package_name: "{{ iap_tar_file.split('.linux.x86_64.tar.gz')[0] }}"
+      when: iap_tar_file is defined
 
-- name: Determine release from the package name
-  ansible.builtin.set_fact:
-    iap_release: "{{ iap_package_name.split('_')[1] }}"
+    - name: Determine package name from the rpm file name
+      ansible.builtin.set_fact:
+        iap_package_name: "{{ iap_rpm_file.split('-')[2] }}"
+      when: iap_rpm_file is defined
+
+- name: Determine release
   when: iap_release is not defined
+  block:
+    - name: Determine release from the package name
+      ansible.builtin.set_fact:
+        iap_release: "{{ iap_package_name.split('_')[1] }}"
+      when: iap_bin_file is defined or iap_tar_file is defined
+
+    - name: Determine release name from the rpm file name
+      ansible.builtin.set_fact:
+        iap_release: "{{ iap_rpm_file.split('-')[2] }}"
+      when: iap_rpm_file is defined
+
+- name: Set install directory when installing from an rpm
+  ansible.builtin.set_fact:
+    iap_install_dir: "/opt/itential/platform"
+  when: iap_rpm_file is defined
 
 - name: Include release vars
   ansible.builtin.include_vars:
@@ -29,5 +46,7 @@
 
 - name: Check for valid IAP release
   ansible.builtin.fail:
-    msg: "Deployer installer does not support installing IAP version {{ iap_release }} on {{ ansible_distribution | lower }}-{{ ansible_distribution_major_version }}"
-  when: invalid_iap_release is defined
+    msg: >-
+      Deployer does not support installing IAP version {{ iap_release }}
+      on {{ ansible_distribution }} {{ ansible_distribution_major_version }}
+  when: iap_invalid_release is defined
