--- a/roles/platform/tasks/upload-platform-archive-from-local.yml
+++ b/roles/platform/tasks/upload-platform-archive-from-local.yml
@@ -1,58 +1,80 @@
 # Copyright (c) 2024, Itential, Inc
 # GNU General Public License v3.0+ (see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
-- name: Upload the IAP bin file using rsync
-  ansible.posix.synchronize:
-    src: "{{ iap_bin_file }}"
-    dest: "{{ iap_install_dir }}/{{ iap_bin_file }}"
-    rsync_opts:
-      - "--copy-links"
-  when:
-    - upload_using_rsync
-    - iap_bin_file is defined
-
-- name: Upload the IAP tar file using rsync
-  ansible.posix.synchronize:
-    src: "{{ iap_tar_file }}"
-    dest: "{{ iap_install_dir }}/{{ iap_tar_file }}"
-    rsync_opts:
-      - "--copy-links"
-  when:
-    - upload_using_rsync
-    - iap_tar_file is defined
-
-- name: Upload the IAP bin file using copy
-  ansible.builtin.copy:
-    src: "{{ iap_bin_file }}"
-    dest: "{{ iap_install_dir }}/{{ iap_bin_file }}"
-    mode: "0775"
-    force: false
-  when:
-    - not upload_using_rsync
-    - iap_bin_file is defined
-
-- name: Upload the IAP tar file using copy
-  ansible.builtin.copy:
-    src: "{{ iap_tar_file }}"
-    dest: "{{ iap_install_dir }}/{{ iap_tar_file }}"
-    mode: "0775"
-    force: false
-  when:
-    - not upload_using_rsync
-    - iap_tar_file is defined
-
-- name: Change bin file ownership, group and permissions
-  ansible.builtin.file:
-    path: "{{ iap_install_dir }}/{{ iap_bin_file }}"
-    owner: "{{ iap_user }}"
-    group: "{{ iap_group }}"
-    mode: "0755"
+- name: Upload IAP bin file
   when: iap_bin_file is defined
+  block:
+    - name: Upload the IAP bin file using rsync
+      ansible.posix.synchronize:
+        src: "{{ iap_bin_file }}"
+        dest: "{{ iap_install_dir }}/{{ iap_bin_file }}"
+        rsync_opts:
+          - "--copy-links"
+      when: upload_using_rsync
 
-- name: Change tar file ownership, group and permissions
-  ansible.builtin.file:
-    path: "{{ iap_install_dir }}/{{ iap_tar_file }}"
-    owner: "{{ iap_user }}"
-    group: "{{ iap_group }}"
-    mode: "0755"
+    - name: Upload the IAP bin file using copy
+      ansible.builtin.copy:
+        src: "{{ iap_bin_file }}"
+        dest: "{{ iap_install_dir }}/{{ iap_bin_file }}"
+        mode: "0775"
+        force: false
+      when: not upload_using_rsync
+
+    - name: Change bin file ownership, group and permissions
+      ansible.builtin.file:
+        path: "{{ iap_install_dir }}/{{ iap_bin_file }}"
+        owner: "{{ iap_user }}"
+        group: "{{ iap_group }}"
+        mode: "0755"
+
+- name: Upload IAP tar file
   when: iap_tar_file is defined
+  block:
+    - name: Upload the IAP tar file using rsync
+      ansible.posix.synchronize:
+        src: "{{ iap_tar_file }}"
+        dest: "{{ iap_install_dir }}/{{ iap_tar_file }}"
+        rsync_opts:
+          - "--copy-links"
+      when: upload_using_rsync
+
+    - name: Upload the IAP tar file using copy
+      ansible.builtin.copy:
+        src: "{{ iap_tar_file }}"
+        dest: "{{ iap_install_dir }}/{{ iap_tar_file }}"
+        mode: "0775"
+        force: false
+      when: not upload_using_rsync
+
+    - name: Change tar file ownership, group and permissions
+      ansible.builtin.file:
+        path: "{{ iap_install_dir }}/{{ iap_tar_file }}"
+        owner: "{{ iap_user }}"
+        group: "{{ iap_group }}"
+        mode: "0755"
+
+- name: Upload IAP rpm file
+  when: iap_rpm_file is defined
+  block:
+    - name: Upload the IAP rpm file using rsync
+      ansible.posix.synchronize:
+        src: "{{ iap_rpm_file }}"
+        dest: "{{ iap_install_dir }}/{{ iap_rpm_file }}"
+        rsync_opts:
+          - "--copy-links"
+      when: upload_using_rsync
+
+    - name: Upload the IAP rpm file using copy
+      ansible.builtin.copy:
+        src: "{{ iap_rpm_file }}"
+        dest: "{{ iap_install_dir }}/{{ iap_rpm_file }}"
+        mode: "0775"
+        force: false
+      when: not upload_using_rsync
+
+    - name: Change rpm file ownership, group and permissions
+      ansible.builtin.file:
+        path: "{{ iap_install_dir }}/{{ iap_rpm_file }}"
+        owner: "{{ iap_user }}"
+        group: "{{ iap_group }}"
+        mode: "0755"
