--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -10,8 +10,8 @@
 
 - name: Check for valid RabbitMQ release
   ansible.builtin.fail:
-    msg: "Deployer installer does not support installing RabbitMQ on IAP version {{ iap_release }}"
-  when: invalid_rabbitmq_packages is defined
+    msg: "Deployer does not support installing RabbitMQ for IAP version {{ iap_release }}"
+  when: rabbitmq_invalid_release is defined
 
 - name: Install base OS packages
   ansible.builtin.include_role:
