--- a/roles/redis/tasks/download-packages.yml
+++ b/roles/redis/tasks/download-packages.yml
@@ -22,8 +22,8 @@
 
 - name: Check for valid Redis release
   ansible.builtin.fail:
-    msg: "Deployer does not support installing Redis on IAP version {{ iap_release }}"
-  when: invalid_redis_release is defined
+    msg: "Deployer does not support installing Redis for IAP version {{ iap_release }}"
+  when: redis_invalid_release is defined
 
 - name: Download package from Remi repo
   when: redis_install_method == "remi_repo"
