--- a/roles/common_vars/vars/main/redis.yml
+++ b/roles/common_vars/vars/main/redis.yml
@@ -1,3 +1,6 @@
 # Copyright (c) 2024, Itential, Inc
 # GNU General Public License v3.0+ (see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
+# The Redis/Sentinel port defaults
+redis_default_port: 6379
+redis_sentinel_default_port: 26379
