--- a/roles/redis/tasks/install_common.yml
+++ b/roles/redis/tasks/install_common.yml
@@ -9,11 +9,6 @@
     name: vm.overcommit_memory
     value: 1
 
-- name: Install custom SELinux profiles
-  ansible.builtin.include_role:
-    name: selinux
-  tags: configure_selinux
-
 # Check if firewalld is running, if it is then open the appropriate ports
 - name: Gather service facts
   ansible.builtin.service_facts:
@@ -27,7 +22,7 @@
     immediate: true
   loop:
     - "{{ redis_port }}/tcp"
-    - "{{ redis_replication | bool | ternary(rabbitmq_mgt_console_port ~ '/tcp', omit) }}"
+    - "{{ redis_sentinel_port }}/tcp"
   when:
     - ansible_facts.services["firewalld.service"] is defined
     - ansible_facts.services["firewalld.service"].state == "running"
@@ -50,7 +45,7 @@
     owner: "{{ redis_owner }}"
     group: "{{ redis_group }}"
     mode: "0755"
-  when: redis_data_dir != "/var/lib/redis" or redis_install_method == "source"
+  when: redis_data_dir != "/var/lib/redis" or redis_install_from_source | bool
 
 - name: Create Redis log directory
   ansible.builtin.file:
@@ -59,7 +54,7 @@
     owner: "{{ redis_owner }}"
     group: "{{ redis_group }}"
     mode: "0755"
-  when: redis_log_dir != "/var/log/redis" or redis_install_method == "source"
+  when: redis_log_dir != "/var/log/redis" or redis_install_from_source | bool
 
 - name: Create Redis pid directory
   ansible.builtin.file:
@@ -68,7 +63,7 @@
     owner: "{{ redis_owner }}"
     group: "{{ redis_group }}"
     mode: "0755"
-  when: redis_pid_dir != "/var/run" or redis_install_method == "source"
+  when: redis_pid_dir != "/var/run" or redis_install_from_source | bool
 
 - name: Create Redis configuration directory
   ansible.builtin.file:
@@ -77,3 +72,4 @@
     owner: "{{ redis_owner }}"
     group: "{{ redis_group }}"
     mode: "0760"
+  when: redis_conf_path != "/etc/redis" or redis_install_from_source | bool
