--- a/roles/redis/vars/release-2023.2.yml
+++ b/roles/redis/vars/release-2023.2.yml
@@ -3,32 +3,16 @@
 ---
 # The keys here are intended to represent the Redhat/Rocky/Centos major version
 
-# The redis_packages and redis_repo_url are used when the
-# redis_install_method is set to 'remi_repo'
-redis_packages:
+# The redis_packages_default is used when the
+# redis_install_from_source is set to 'true'
+redis_packages_default:
   "8":
     - "@redis:remi-7.2"
   "9":
     - "@redis:remi-7.2"
 
-redis_repo_url:
-  "8": "https://rpms.remirepo.net/enterprise/remi-release-8.rpm"
-  "9": "https://rpms.remirepo.net/enterprise/remi-release-9.rpm"
-
-# The redis_source_url and redis_build_packages are used when the
-# redis_install_method is set to 'source'
-redis_source_url:
+# The redis_source_url_default is used when the
+# redis_install_from_source is set to 'false'
+redis_source_url_default:
   "8": "https://github.com/redis/redis/archive/7.2.4.tar.gz"
   "9": "https://github.com/redis/redis/archive/7.2.4.tar.gz"
-
-redis_build_packages:
-  "8":
-    - gcc
-    - gcc-c++
-    - make
-    - systemd-devel
-  "9":
-    - gcc
-    - gcc-c++
-    - make
-    - systemd-devel
