--- a/roles/vault/tasks/vault-online.yml
+++ b/roles/vault/tasks/vault-online.yml
@@ -18,6 +18,6 @@
 
 - name: Install vault
   ansible.builtin.dnf:
-    name: "{{ vault_version }}"
+    name: "{{ vault_packages }}"
     update_cache: true
     state: present
