--- a/roles/vault/vars/release-2021.1.yml
+++ b/roles/vault/vars/release-2021.1.yml
@@ -1,3 +1,11 @@
 # Copyright (c) 2024, Itential, Inc
 # GNU General Public License v3.0+ (see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
+# Vault package to install
+vault_packages_default:
+  "7":
+    - vault-1.11.4
+  "8":
+    - vault-1.11.4
+  "9":
+    - vault-1.11.4
