--- a/roles/redis/vars/main.yml
+++ b/roles/redis/vars/main.yml
@@ -1,6 +1,10 @@
 # Copyright (c) 2024, Itential, Inc
 # GNU General Public License v3.0+ (see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
+# Default ports
+redis_port_default: 6379
+redis_sentinel_port_default: 26379
+
 # Default directories
 redis_bin_dir_default: /usr/bin
 redis_conf_dir_default: /etc/redis
