--- a/roles/vault/defaults/main/main.yml
+++ b/roles/vault/defaults/main/main.yml
@@ -1,8 +1,14 @@
 # Copyright (c) 2024, Itential, Inc
 # GNU General Public License v3.0+ (see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
+# The default port of the vault server
+vault_port: 8200
+
 # The default port used by vault clusters to communicate with each other
 vault_cluster_port: 8201
+
+# The default directory to store vault data and other config data
+vault_dir: /opt/vault
 
 # The default user that runs vault
 vault_user: vault
@@ -12,3 +18,13 @@ vault_group: vault
 
 # Default directory to store the unseal keys
 vault_unseal_keys_dir: "{{ vault_dir }}/keys/unseal_keys"
+
+# Default default to store the root key
+vault_root_key_dir: "{{ vault_dir }}/keys/root_key"
+
+# Flag to manage how secret data is written to Vault with Itential Platform
+# version 2021.2 and later.
+vault_read_only: true
+
+# default vault name
+vault_name: itential
