--- a/roles/os/tasks/redhat.yml
+++ b/roles/os/tasks/redhat.yml
@@ -11,7 +11,7 @@
 - name: Check supported OS
   ansible.builtin.fail:
     msg: "Deployer does not support installing on OS version {{ ansible_distribution_major_version }}!"
-  when: invalid_os_release is defined
+  when: os_invalid_release is defined
 
 - name: Include OS specific tasks
   ansible.builtin.include_tasks: "{{ ansible_os_family.lower() }}-online.yml"
