--- a/roles/os/vars/release-8.yml
+++ b/roles/os/vars/release-8.yml
@@ -5,7 +5,7 @@ os_packages:
   - coreutils
   - openssl
 
-security_packages:
+os_security_packages:
   - checkpolicy
   - libselinux
   - libselinux-utils
@@ -13,7 +13,7 @@ security_packages:
   - policycoreutils-python-utils
   - selinux-policy-mls
 
-operational_packages:
+os_operational_packages:
   - bind-utils
   - curl
   - dos2unix
