--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -21,4 +21,7 @@
   ansible.builtin.import_tasks:
     file: configure-mongodb.yml
   tags: configure_mongodb
-  when: mongodb_auth_enabled | bool or mongodb_tls_enabled | bool or mongodb_replication_enabled | bool
+  when: >
+    mongodb_auth_enabled | bool or
+    mongodb_tls_enabled | bool or
+    mongodb_replication_enabled | bool
