--- a/roles/gateway/tasks/main.yml
+++ b/roles/gateway/tasks/main.yml
@@ -191,7 +191,8 @@
         # - For Nexus: Uses a default header ("Accept: application/octet-stream") since Nexus
         #   doesn't support API key authentication.
         headers: >-
-          {%- if repository_api_key is defined and gateway_archive_download_url is search("jfrog") -%}
+          {%- if repository_api_key is defined and
+              gateway_archive_download_url is search("jfrog") -%}
             {"X-JFrog-Art-Api": "{{ repository_api_key }}", "Accept": "application/octet-stream"}
           {%- else -%}
             {"Accept": "application/octet-stream"}
