--- a/roles/gateway/tasks/upgrade-gateway.yml
+++ b/roles/gateway/tasks/upgrade-gateway.yml
@@ -26,10 +26,13 @@
         dest: "{{ workingdir.path }}/"
         mode: '0644'
         # Sets the appropriate header based on the repository type:
-        # - For JFrog: Uses the "X-JFrog-Art-Api" header with the API key if "repository_api_key" is defined and "jfrog" is part of the download URL.
-        # - For Nexus: Uses a default header ("Accept: application/octet-stream") since Nexus doesn't support API key authentication.
+        # - For JFrog: Uses the "X-JFrog-Art-Api" header with the API key if "repository_api_key"
+        #   is defined and "jfrog" is part of the download URL.
+        # - For Nexus: Uses a default header ("Accept: application/octet-stream") since Nexus
+        #   doesn't support API key authentication.
         headers: >-
-          {%- if repository_api_key is defined and gateway_archive_download_url is search("jfrog") -%}
+          {%- if repository_api_key is defined and
+              gateway_archive_download_url is search("jfrog") -%}
             {"X-JFrog-Art-Api": "{{ repository_api_key }}", "Accept": "application/octet-stream"}
           {%- else -%}
             {"Accept": "application/octet-stream"}
