--- a/roles/os/tasks/redhat.yml
+++ b/roles/os/tasks/redhat.yml
@@ -10,7 +10,8 @@
 
 - name: Check supported OS
   ansible.builtin.fail:
-    msg: "Deployer does not support installing on OS version {{ ansible_distribution_major_version }}!"
+    msg: "Deployer does not support installing
+         on OS version {{ ansible_distribution_major_version }}!"
   when: os_invalid_release is defined
 
 - name: Include OS specific tasks
