--- a/roles/redis/defaults/main/install.yml
+++ b/roles/redis/defaults/main/install.yml
@@ -6,7 +6,8 @@ redis_package_dependencies:
   - selinux-policy-targeted
 
 # Redis install from source - boolean
-# When set to 'true' Redis will be installed from source.  Otherwise Redis will be installed from YUM.
+# When set to 'true' Redis will be installed from source.
+# Otherwise Redis will be installed from YUM.
 redis_install_from_source: true
 
 # Packages required to build Redis from source
@@ -20,5 +21,7 @@ redis_build_packages:
 #  - redis_install_from_source is set to 'false'
 #  - common_install_yum_repos is set to 'true'
 #  - redis_packages contains 'remi'
-redis_remi_repo_url: "http://rpms.remirepo.net/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm"
-redis_epel_repo_url: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
+redis_remi_repo_url: "http://rpms.remirepo.net/enterprise/remi-release-\
+  {{ ansible_distribution_major_version }}.rpm"
+redis_epel_repo_url: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-\
+  {{ ansible_distribution_major_version }}.noarch.rpm"
