--- a/roles/redis/tasks/install-common.yml
+++ b/roles/redis/tasks/install-common.yml
@@ -2,8 +2,9 @@
 # GNU General Public License v3.0+ (see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
 # Kernel Adjust
-# Memory overcommit must be enabled! Without it, a background save or replication may fail under low memory condition.
-# Being disabled, it can can also cause failures without low memory condition, see https://github.com/jemalloc/jemalloc/issues/1328
+# Memory overcommit must be enabled! Without it, a background save or replication may fail under
+# low memory condition. Being disabled, it can can also cause failures without low memory
+# condition, see https://github.com/jemalloc/jemalloc/issues/1328
 - name: Adjust Memory Overcommit
   ansible.posix.sysctl:
     name: vm.overcommit_memory
