--- a/roles/os/tasks/download-packages.yml
+++ b/roles/os/tasks/download-packages.yml
@@ -41,7 +41,7 @@
     tasks_from: download-rpms
   vars:
     offline_download_method: yum_module
-    offline_download_packages: "{{ os_os_security_packages }}"
+    offline_download_packages: "{{ os_security_packages }}"
     offline_download_dir: "{{ os_offline_target_node_rpms_dir }}"
 
 - name: Download operations RPMs
